--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Durham Sacred Harp</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
+    <meta name="description" content="Durham Sacred Harp meet to sing in Durham city centre twice a month" />
+    <meta property="og:title" content="Durham Sacred Harp" />
+    <meta property="og:description" content="Sing American folk hymns in Durham" />
+    <meta property="og:image" content="images/social.png" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
     <h1>test</h1>
