--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Durham Sacred Harp</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
     <meta name="description" content="Durham Sacred Harp meet to sing in Durham city centre twice a month" />
     <meta property="og:title" content="Durham Sacred Harp" />
@@ -13,7 +15,26 @@
     <meta property="og:image" content="images/social.png" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 </head>
+
 <body>
-    <h1>test</h1>
+    <div class="container">
+        <div class="row">
+            <h1 class="text-center">Durham Sacred Harp</h1>
+            <p><strong>PLACEHOLDER TEXT ONLY - ALL OF THIS INFORMATION MAY CHANGE</strong></p>
+        </div>
+        <div class="row">
+                <p>Sacred Harp is an community folk hymn singing tradition from the United States. The Sacred Harp is also the name of the book we sing from.</p>
+
+                <p>We sing Sacred Harp in Durham every [dates/times TBC] at [location TBC].</p>
+                
+                <p>Our singings are open to all. We aren't a choir as we don't rehearse or perform and no-one's in charge. Everyone just sings for their own enjoyment. You don't need to be able to read music yet or have a "good" voice to come along.</p>
+                
+                <p>The words of most of the songs are from the Christian faith but singers of all religions and none are welcome.</p>
+
+        </div>
+
+
+    </div>
 </body>
+
 </html>
