--- a/index.html
+++ b/index.html
@@ -17,22 +17,28 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container fill">
         <div class="row">
-            <h1 class="text-center">Durham Sacred Harp</h1>
-            <p><strong>PLACEHOLDER TEXT ONLY - ALL OF THIS INFORMATION MAY CHANGE</strong></p>
+            <div class="col text-center">
+                <h1>Durham Sacred Harp</h1>
+                <h5>PLACEHOLDER TEXT ONLY - ALL OF THIS INFORMATION MAY CHANGE</h5>
+            </div>
         </div>
         <div class="row">
-                <p>Sacred Harp is an community folk hymn singing tradition from the United States. The Sacred Harp is also the name of the book we sing from.</p>
+            <div class="col">
+                <p>Sacred Harp is an community folk hymn singing tradition from the United States. The Sacred Harp is also the
+                    name of the book we sing from.</p>
 
                 <p>We sing Sacred Harp in Durham every [dates/times TBC] at [location TBC].</p>
-                
-                <p>Our singings are open to all. We aren't a choir as we don't rehearse or perform and no-one's in charge. Everyone just sings for their own enjoyment. You don't need to be able to read music yet or have a "good" voice to come along.</p>
-                
+
+                <p>Come along! Our singings are open to all. We aren't a choir as we don't rehearse or perform and no-one's
+                    in charge. Everyone just sings for their own enjoyment. You don't need to be able to read music yet or
+                    have a "good" voice to come along.</p>
+
                 <p>The words of most of the songs are from the Christian faith but singers of all religions and none are welcome.</p>
 
+            </div>
         </div>
-
 
     </div>
 </body>
