--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Durham Sacred Harp" />
     <meta property="og:description" content="Sing American folk hymns in Durham" />
     <meta property="og:image" content="images/social.png" />
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 </head>
 
 <body>
