--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="description" content="Durham Sacred Harp meet to sing in Durham city centre twice a month" />
     <meta property="og:title" content="Durham Sacred Harp" />
     <meta property="og:description" content="Sing American folk hymns in Durham" />
-    <meta property="og:image" content="images/social.png" />
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/durhamsacredharp/durhamsacredharp.github.io/master/images/social.png" />
+    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/durhamsacredharp/durhamsacredharp.github.io/master/images/favicon.ico" />
 
 </head>
 
