adding twitter metadata

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <meta property="og:title" content="Durham Sacred Harp" />
     <meta property="og:description" content="Sing American folk hymns in Durham" />
     <meta property="og:image" content="https://durhamsacredharp.co.uk/images/durham_sacred_harp_social.png" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@durhamsacredharp">
+    <meta name="twitter:creator" content="@durhamsacredharp">
+    <meta name="twitter:title" content="Sing American folk hymns in Durham">
+    <meta name="twitter:description" content="Durham Sacred Harp meet to sing in Durham city centre twice a month">
+    <meta name="twitter:image" content="https://durhamsacredharp.co.uk/images/durham_sacred_harp_social.png">
     <link rel="icon" type="image/x-icon" href="https://durhamsacredharp.co.uk/images/favicon.ico" />
 
 </head>
