fixing twitter handle in metadata

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta property="og:description" content="Sing American folk hymns in Durham" />
     <meta property="og:image" content="https://durhamsacredharp.co.uk/images/durham_sacred_harp_social.png" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@durhamsacredharp">
-    <meta name="twitter:creator" content="@durhamsacredharp">
+    <meta name="twitter:site" content="@durham_sh">
+    <meta name="twitter:creator" content="@durham_sh">
     <meta name="twitter:title" content="Sing American folk hymns in Durham">
     <meta name="twitter:description" content="Durham Sacred Harp meet to sing in Durham city centre twice a month">
     <meta name="twitter:image" content="https://durhamsacredharp.co.uk/images/durham_sacred_harp_social.png">
