updating to bootstrap v4 stable

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Durham Sacred Harp</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
     <meta name="description" content="Durham Sacred Harp meet to sing in Durham city centre twice a month" />
@@ -82,7 +82,9 @@
                     <u>Contact us</u>
                 </h2>
                 <p>We'd love to hear from you. You can email us at
-                    <a href="mailto:mail@durhamsacredharp.co.uk">mail@durhamsacredharp.co.uk</a>. We're also on Twitter at <a href="https://twitter.com/durham_sh">@durham_sh</a></p>.
+                    <a href="mailto:mail@durhamsacredharp.co.uk">mail@durhamsacredharp.co.uk</a>. We're also on Twitter at
+                    <a href="https://twitter.com/durham_sh">@durham_sh</a>
+                </p>.
             </div>
         </div>
         <div class="row mb-4" id="more-info">
