adding family-friendly info

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                 <p>The words of most of the songs are from the Christian faith but singers of all religions and none are welcome.</p>
 
                 <p>We have loaner books for you to sing from and you can buy your own book for £25 cash.</p>
+
+                <p>Feel free to bring along children. You'll be responsible for your own children but there are toys to play with and baby changing facilities.</p>
             </div>
         </div>
         <div class="row mt-4" id="map">
