--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                 </h2>
                 <p>We'd love to hear from you. You can email us at
                     <a href="mailto:mail@durhamsacredharp.co.uk">mail@durhamsacredharp.co.uk</a>. We're also on Twitter at
-                    <a href="https://twitter.com/durham_sh">@durham_sh</a>
-                </p>.
+                    <a href="https://twitter.com/durham_sh">@durham_sh</a>.
+                </p>
             </div>
         </div>
         <div class="row mb-4" id="more-info">
