--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta name="twitter:description" content="Durham Sacred Harp meet to sing in Durham city centre twice a month">
     <meta name="twitter:image" content="https://durhamsacredharp.co.uk/images/durham_rectangle_social_twitter.png">
     <link rel="icon" type="image/x-icon" href="https://durhamsacredharp.co.uk/images/favicon.ico" />
+    <meta name="google-site-verification" content="_wn5kDD-KQIqThtDEBTZNvmbzzF3UoENjI3VURcHtqs" />
 
 </head>
 
