--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/later/1.2.0/later.min.js" integrity="sha256-Ot6f49xEDCNepxlyI6IjkxZVNRvYdfdc60+bdTZ8c4Y="
-        crossorigin="anonymous"></script>
-
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/later/1.2.0/later.min.js" integrity="sha256-Ot6f49xEDCNepxlyI6IjkxZVNRvYdfdc60+bdTZ8c4Y="
+        crossorigin="anonymous"></script> -->
+    <script src="/js/later.min.js" integrity="sha384-vEZdS7b843boNPx50Z7Dyz32INueQjqBguuwXR35L8je2BiVqU5yiFRKsIU5jyJ7" crossorigin="anonymous"></script>
     <script src="/js/main.js"></script>
 </body>
 
