--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                 </h2>
                 <p>
                     <img src="/images/email.svg" alt="Email" style="max-width: 50px; margin-right: 10px">Email us at
-                    <a href="mailto:mail@durhamsacredharp.co.uk">mail@durhamsacredharp.co.uk</a>.</p>
+                    <a href="mailto:mail@durhamsacredharp.co.uk">mail@durhamsacredharp.co.uk</a></p>
                 <p>
                     <img src="/images/twitter.svg" alt="Twitter" style="max-width: 50px; margin-right: 10px">We're also on Twitter at
-                    <a href="https://twitter.com/durham_sh">@durham_sh</a>.</p>
+                    <a href="https://twitter.com/durham_sh">@durham_sh</a></p>
             </div>
         </div>
         <div class="row mb-4" id="more-info">
