--- a/index.html
+++ b/index.html
@@ -87,16 +87,12 @@
                     <u>Contact us</u>
                 </h2>
                 <p>
-                    <a href="mailto:mail@durhamsacredharp.co.uk">
-                        <img src="/images/email.svg" alt="Email" style="max-width: 50px; margin-right: 10px">
-                    </a>
+                    <a href="mailto:mail@durhamsacredharp.co.uk"><img src="/images/email.svg" alt="Email" style="max-width: 50px; margin-right: 10px"></a>
                     Email us at
                     <a href="mailto:mail@durhamsacredharp.co.uk">mail@durhamsacredharp.co.uk</a>
                 </p>
                 <p>
-                    <a href="https://twitter.com/durham_sh">
-                        <img src="/images/twitter.svg" alt="Twitter" style="max-width: 50px; margin-right: 10px">
-                    </a>
+                    <a href="https://twitter.com/durham_sh"><img src="/images/twitter.svg" alt="Twitter" style="max-width: 50px; margin-right: 10px"></a>
                     We're also on Twitter at
                     <a href="https://twitter.com/durham_sh">@durham_sh</a>
                 </p>
