--- a/index.html
+++ b/index.html
@@ -86,16 +86,30 @@
                 <h2 class="text-center mb-3">
                     <u>Contact us</u>
                 </h2>
-                <p>
-                    <a href="mailto:mail@durhamsacredharp.co.uk"><img src="/images/email.svg" alt="Email" style="max-width: 50px; margin-right: 10px"></a>
-                    Email us at
-                    <a href="mailto:mail@durhamsacredharp.co.uk">mail@durhamsacredharp.co.uk</a>
-                </p>
-                <p>
-                    <a href="https://twitter.com/durham_sh"><img src="/images/twitter.svg" alt="Twitter" style="max-width: 50px; margin-right: 10px"></a>
-                    We're also on Twitter at
-                    <a href="https://twitter.com/durham_sh">@durham_sh</a>
-                </p>
+                <div class="row">
+                    <div class="col-2">
+                        <a href="mailto:mail@durhamsacredharp.co.uk">
+                            <img src="/images/email.svg" alt="Email">
+                        </a>
+                    </div>
+                    <div class="col-10">
+                        <p>Email us at
+                            <a href="mailto:mail@durhamsacredharp.co.uk">mail@durhamsacredharp.co.uk</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-2">
+                        <a href="https://twitter.com/durham_sh">
+                            <img src="/images/twitter.svg" alt="Twitter">
+                        </a>
+                    </div>
+                    <div class="col-10">
+                        <p>We're also on Twitter at
+                            <a href="https://twitter.com/durham_sh">@durham_sh</a>
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row mb-4" id="more-info">
