--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
         <div class="row mt-4 mb-4">
             <div class="col-10 offset-1 col-lg-8 offset-lg-2">
                 <p>
-                    <a href="#more-info">Sacred Harp</a> is a community folk hymn singing tradition from the United States. The Sacred Harp is
-                    also the name of the book we sing from.</p>
+                    <a href="#more-info">Sacred Harp</a> is a community folk hymn singing tradition from the United States. The Sacred Harp is also the name of the book we sing from.</p>
                 <div class="highlight px-3 px-md-5">
                     <p>
                         <span class="font-italic font-weight-bold">We sing every 2nd and 4th Saturday 2pm - 4pm</span> at
