--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Durham Sacred Harp</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://durhamsacredharp.co.uk/css/main.css">
     <meta name="description" content="Durham Sacred Harp meet to sing in Durham city centre twice a month" />
     <meta property="og:title" content="Durham Sacred Harp" />
     <meta property="og:description" content="Sing American folk hymns in Durham" />
@@ -27,13 +28,26 @@
     <div class="container mb-5">
         <div class="row">
             <div class="col-10 offset-1 col-lg-8 offset-lg-2 text-center">
-                <img src="images/durham_sacred_harp_logo_rectangle.png" class="img-fluid" alt="Durham Sacred Harp">
+                <img src="https://durhamsacredharp.co.uk/images/durham_sacred_harp_logo_rectangle.png" class="img-fluid" alt="Durham Sacred Harp">
             </div>
         </div>
         <div class="row mt-4 mb-4">
             <div class="col-10 offset-1 col-lg-8 offset-lg-2">
                 <p>
-                    <a href="#more-info">Sacred Harp</a> is a community folk hymn singing tradition from the United States. The Sacred Harp is also the name of the book we sing from.</p>
+                    <a href="#more-info">Sacred Harp</a> is a community folk hymn singing tradition from the United States. The Sacred Harp is
+                    also the name of the book we sing from.</p>
+                <div class="notification px-3 px-md-5">
+                    <p>
+                        On
+                        <strong>Sunday 10th June from 1-2pm</strong>, we're doing a singing school and singing at
+                        <a href="https://www.google.co.uk/maps/place/St+Johns+Church+Nevilles+Cross/@54.7720355,-1.5951207,17z/data=!3m1!4b1!4m5!3m4!1s0x487e87577f60457b:0xe5f48628ae11b8ac!8m2!3d54.7720355!4d-1.592932">St John's Church in Neville's Cross</a> in Durham. It's part of their
+                        <strong>
+                            <a href="http://www.sjnx.org.uk/activities/special-events/ecofest-2/">annual EcoFest</a>
+                        </strong>.</p>
+                    <p>Come along to sing with us and help out with the singing school! There's a normal singing the day before
+                        too so you could even make a weekend of it.
+                    </p>
+                </div>
                 <div class="highlight px-3 px-md-5">
                     <p>
                         <span class="font-italic font-weight-bold">We sing every 2nd and 4th Saturday 2pm - 4pm</span> at
@@ -70,7 +84,7 @@
                     <small>Click on the map below for Google Maps</small>
                 </p>
                 <a href="https://www.google.com/maps/place/Antioch+House+%E2%80%93+St+Margaret's+Parish+Centre/@54.7761972,-1.5821623,17z/data=!3m1!4b1!4m5!3m4!1s0x487e7d8abc0a764b:0x766ab837ecc03183!8m2!3d54.7758477!4d-1.5799069?hl=en-GB">
-                    <img src="images/map.png" class="img-fluid mx-auto d-block" alt="map of durham">
+                    <img src="https://durhamsacredharp.co.uk/images/map.png" class="img-fluid mx-auto d-block" alt="map of durham">
                 </a>
                 <p class="text-right">
                     <small>Map data ©2018 Google
@@ -85,12 +99,16 @@
                     <u>Contact us</u>
                 </h2>
                 <p>
-                    <a href="mailto:mail@durhamsacredharp.co.uk"><img src="/images/email.svg" alt="Email" style="max-width: 50px; margin-right: 10px"></a>
+                    <a href="mailto:mail@durhamsacredharp.co.uk">
+                        <img src="https://durhamsacredharp.co.uk/images/email.svg" alt="Email" style="max-width: 50px; margin-right: 10px">
+                    </a>
                     Email us at
                     <a href="mailto:mail@durhamsacredharp.co.uk">mail@durhamsacredharp.co.uk</a>
                 </p>
                 <p>
-                    <a href="https://twitter.com/durham_sh"><img src="/images/twitter.svg" alt="Twitter" style="max-width: 50px; margin-right: 10px"></a>
+                    <a href="https://twitter.com/durham_sh">
+                        <img src="https://durhamsacredharp.co.uk/images/twitter.svg" alt="Twitter" style="max-width: 50px; margin-right: 10px">
+                    </a>
                     We're also on Twitter at
                     <a href="https://twitter.com/durham_sh">@durham_sh</a>
                 </p>
@@ -120,8 +138,9 @@
 
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/later/1.2.0/later.min.js" integrity="sha256-Ot6f49xEDCNepxlyI6IjkxZVNRvYdfdc60+bdTZ8c4Y="
         crossorigin="anonymous"></script> -->
-    <script src="/js/later.min.js" integrity="sha384-vEZdS7b843boNPx50Z7Dyz32INueQjqBguuwXR35L8je2BiVqU5yiFRKsIU5jyJ7" crossorigin="anonymous"></script>
-    <script src="/js/main.js"></script>
+    <script src="https://durhamsacredharp.co.uk/js/later.min.js" integrity="sha384-vEZdS7b843boNPx50Z7Dyz32INueQjqBguuwXR35L8je2BiVqU5yiFRKsIU5jyJ7"
+        crossorigin="anonymous"></script>
+    <script src="https://durhamsacredharp.co.uk/js/main.js"></script>
 </body>
 
 </html>
