--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="notification px-3 px-md-5">
                     <p>
                         On
-                        <strong>Sunday 10th June from 1-2pm</strong>, we're doing a singing school and singing at
+                        <strong>Sunday 10th June from 1pm</strong>, we're doing a singing school and singing at
                         <a href="https://www.google.co.uk/maps/place/St+Johns+Church+Nevilles+Cross/@54.7720355,-1.5951207,17z/data=!3m1!4b1!4m5!3m4!1s0x487e87577f60457b:0xe5f48628ae11b8ac!8m2!3d54.7720355!4d-1.592932">St John's Church in Neville's Cross</a> in Durham. It's part of their
                         <strong>
                             <a href="http://www.sjnx.org.uk/activities/special-events/ecofest-2/">annual EcoFest</a></strong>.</p>
