--- a/index.html
+++ b/index.html
@@ -36,17 +36,11 @@
                 <p>
                     <a href="#more-info">Sacred Harp</a> is a community folk hymn singing tradition from the United States. The Sacred Harp is
                     also the name of the book we sing from.</p>
-                <div class="notification px-3 px-md-5">
-                    <p>
-                        On
-                        <strong>Sunday 10th June from 12.45pm</strong>, we're doing a singing school and singing at
-                        <a href="https://www.google.co.uk/maps/place/St+Johns+Church+Nevilles+Cross/@54.7720355,-1.5951207,17z/data=!3m1!4b1!4m5!3m4!1s0x487e87577f60457b:0xe5f48628ae11b8ac!8m2!3d54.7720355!4d-1.592932">St John's Church in Neville's Cross</a> in Durham. It's part of their
-                        <strong>
-                            <a href="http://www.sjnx.org.uk/activities/special-events/ecofest-2/">annual EcoFest</a></strong>.</p>
-                    <p>Come along to sing with us and help out with the singing school! There's a normal singing the day before
-                        too so you could even make a weekend of it.
-                    </p>
-                </div>
+                    
+                <!-- <div class="notification px-3 px-md-5">
+                    Special announcements go here
+                </div> -->
+
                 <div class="highlight px-3 px-md-5">
                     <p>
                         <span class="font-italic font-weight-bold">We sing every 2nd and 4th Saturday 2pm - 4pm</span> at
