--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     Special announcements go here
                 </div> -->
 
-                <div class="highlight px-3 px-md-5">
+                <div class="highlight px-3 px-md-5 mb-4">
                     <p>
                         <span class="font-italic font-weight-bold">We sing every 2nd and 4th Saturday 2pm - 4pm</span> at
                         <a href="#map" class="font-italic font-weight-bold" id="map-link">Antioch House, 66 Crossgate, Durham</a>.</strong>
